# public-market-portfolio-risk-dashboard

./: .gitignore  README.md  pyproject.toml
docs/: CASE_STUDY.md  LIMITATIONS.md  METHODOLOGY.md
docs/tables/: correlation_matrix.csv  risk_metric_table.csv
src/portfolio_risk_dashboard/: __init__.py  charts.py  config.py  data_loader.py  metrics.py  pipeline.py  stress_periods.py
tests/: test_metrics.py  test_stress_periods.py
